--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -5,7 +5,8 @@
   <title>Detail Page</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./home.css">
 </head>
 <body>
   <script type="module" src="./dist/detail.js"></script>
