--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./home.css">
+  <link rel="stylesheet" href="./detail.css">
 </head>
 <body>
   <script type="module" src="./dist/detail.js"></script>
