--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="./detail.css">
 </head>
 <body>
+  <body>
+  <!-- โหลดคอมโพเนนต์ (ไฟล์ .js ที่คอมไพล์จาก .ts) -->
   <script type="module" src="./dist/detail.js"></script>
+
+  <!-- ดึงข้อมูลจากไฟล์ JSON -->
+  <show-detail data-src="./detail.json"></show-detail>
 </body>
 </html>
