--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./home.css">
   <link rel="stylesheet" href="./navbar.css">
+  <link rel="stylesheet" href="./footer.css">
 </head>
 <body>
   <script type="module" src="./dist/home.js" defer></script>
