--- a/frontend/cast.html
+++ b/frontend/cast.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./cast.css">
+  <link rel="stylesheet" href="./navbar.css">
 </head>
 <body>
   <script type="module" src="./dist/cast.js" defer></script>
