--- a/frontend/cast.html
+++ b/frontend/cast.html
@@ -8,8 +8,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./cast.css">
   <link rel="stylesheet" href="./navbar.css">
+  <link rel="stylesheet" href="./footer.css">
 </head>
 <body>
   <script type="module" src="./dist/cast.js" defer></script>
+  
 </body>
 </html>
