--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -16,6 +16,6 @@
   <script type="module" src="./dist/detail.js"></script>
 
   <!-- <show-detail data-src="./data/detail.json"></show-detail> -->
-   <show-detail data-src="http://127.0.0.1:8000/series"></show-detail>
+   <show-detail data-src="http://127.0.0.1:8000/series/detail"></show-detail>
 </body>
 </html>
