แก้สไตล์ + พาสไปหน้าดีเทล by url

--- a/frontend/search_result.html
+++ b/frontend/search_result.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./navbar.css">
   <link rel="stylesheet" href="./footer.css">
   <link rel="stylesheet" href="./search_result.css">
+  <!-- <link rel="stylesheet" href="./home.css"> -->
 </head>
 <body>
   <script type="module" src="./dist/search_result.js"></script>
