--- a/frontend/cast.html
+++ b/frontend/cast.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Home Page</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./cast.css">
-  <link rel="stylesheet" href="./navbar.css">
-  <link rel="stylesheet" href="./footer.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="./cast.css" />
+  <link rel="stylesheet" href="./navbar.css" />
+  <link rel="stylesheet" href="./footer.css" />
 </head>
 <body>
   <script type="module" src="./dist/cast.js" defer></script>
-  
 </body>
 </html>
